force-app/main/default/objects/ApprovalMetric__mdt/ApprovalMetric__mdt.object-meta.xml
<CustomObject>
    <label>Métrica de Aprobación</label>
    <pluralLabel>Métricas de Aprobación</pluralLabel>
</CustomObject>