force-app/main/default/objects/ApprovalMetric__mdt/fields/ControllerField__c.field-meta.xml
<CustomField>
    <fullName>ControllerField__c</fullName>
    <description>Field API Names used to identify which process triggered the approval process.</description>
    <inlineHelpText>Nombre del campo que se usará para identificar el proceso que se ha activado.</inlineHelpText>
    <label>Campo de Control</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>