force-app/main/default/objects/ApprovalMetric__mdt/fields/QuoteField__c.field-meta.xml
<CustomField>
    <fullName>QuoteField__c</fullName>
    <description>API Name of the Quote Field to be approved.</description>
    <inlineHelpText>Nombre API del campo de Oferta a aprobar.</inlineHelpText>
    <label>Campo de Oferta</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>