force-app/main/default/objects/ApprovalMetric__mdt/fields/RelativeValueField__c.field-meta.xml
<CustomField>
    <fullName>RelativeValueField__c</fullName>
    <description>Quote field API Name to be compared for relative value stretches.</description>
    <inlineHelpText>Nombre API del campo de Oferta sobre el que se van a realizar las comparaciones.</inlineHelpText>
    <label>Campo de Valor Relativo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>