force-app/main/default/objects/ApprovalMetric__mdt/fields/SkipApprovalField__c.field-meta.xml
<CustomField>
    <fullName>SkipApprovalField__c</fullName>
    <description>Checkbox field in SBQQ__Quote__c that, if true, skips the approval request generation.</description>
    <inlineHelpText>Campo casilla de Oferta que, en caso de estar seleccionado, se ignorará la creación de solicitudes de aprobación.</inlineHelpText>
    <label>Campo para Ignorar Aprobación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>