force-app/main/default/objects/ApprovalMetric__mdt/fields/StretchType__c.field-meta.xml
<CustomField>
    <fullName>StretchType__c</fullName>
    <label>Tipo de Tramo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor Absoluto</fullName>
                <default>true</default>
                <label>Valor Absoluto</label>
            </value>
            <value>
                <fullName>Valor Relativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>